--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,8 +18,42 @@ html {
 
 body {
   min-height: 100vh;
-  // font-family: var(--font-manrope);
-
+  font-family: var(--font-700);
   font-style: normal;
-  // background-color: $secondary50;
+  color: $textColor;
+  background-color: $bodyColor;
+
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  width: 100%;
+}
+
+header,
+footer {
+  width: inherit;
+  max-width: inherit;
+}
+section {
+  width: 100%;
+  background-color: aqua;
+  padding: $sectionPaddingMobile;
+
+  @media screen and (min-width: $desktop) {
+    padding: $sectionPaddingDesktop;
+  }
+}
+.container {
+  background-color: aquamarine;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
 }
