--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -2,6 +2,10 @@ $mobile: "360px";
 $tablet: "768px";
 $laptop: "1024px";
 $desktop: "1440px";
+
+// @media screen and (min-width: $mobile) {
+
+// }
 // @media screen and (min-width: $tablet) {
 
 // }
@@ -14,8 +18,8 @@ $desktop: "1440px";
 
 // }
 
-$textColor: rgba(25, 43, 57, 1);
-$accentColor: rgba(242, 101, 21, 1);
+$textColor: rgb(25, 43, 57);
+$accentColor: rgb(242, 101, 21);
 
 $bodyColor: rgba(250, 250, 255, 1);
 
