--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,4 +2,18 @@
 
 .header {
   padding: 16px $topBottomPaddingMobile;
+  position: fixed;
+  z-index: 100;
+  background-color: $bodyColor;
+
+  @media screen and (min-width: $desktop) {
+    height: 108px;
+  }
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: space-between;
 }
