--- a/src/components/NavigationHeader/NavigationHeader.module.scss
+++ b/src/components/NavigationHeader/NavigationHeader.module.scss
@@ -6,4 +6,41 @@
   font-weight: 400;
   display: flex;
   gap: 32px;
+  height: 108px;
+}
+
+// .navItem {
+// }
+.navItemTitle {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  height: 100%;
+  background-color: $bodyColor;
+  position: relative;
+  z-index: 10;
+  cursor: pointer;
+}
+.arrow {
+  width: 12px;
+  height: 12px;
+
+  transform: rotate(270deg);
+}
+.arrActive {
+  transform: rotate(360deg);
+}
+
+.linksWrapp {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 12px;
+  z-index: 0;
+  background-color: $bodyColor;
+  transform: translateY(0%);
+  transform: translateY(-100%);
+}
+.active {
+  transform: translateY(0%);
 }
