--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -20,6 +20,7 @@ $desktop: "1440px";
 
 $textColor: rgb(25, 43, 57);
 $accentColor: rgb(242, 101, 21);
+$BorderColor: rgba(188, 188, 188, 1);
 
 $bodyColor: rgba(250, 250, 255, 1);
 
