--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,4 @@
-@import "./_variables";
+@import './_variables';
 
 *,
 *::before,
@@ -48,10 +48,28 @@ section {
   width: 100%;
   padding: $topBottomPaddingMobile $sidePaddingMobile;
 
+  @media screen and (min-width: $tablet) {
+    padding: $topBottomPaddingTablet $sidePaddingTablet;
+  }
+
   @media screen and (min-width: $desktop) {
-    padding: $topBottomPaddingMobile $sidePaddingMobile;
+    padding: $topBottomPaddingDesktop $sidePaddingDesktop;
   }
 }
+
+.topSection {
+  padding-top: 88px;
+  @media screen and (min-width: $tablet) {
+    padding-top: 104px;
+  }
+  @media screen and (min-width: $laptop) {
+    padding-top: 140px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-top: 133px;
+  }
+}
+
 .container {
   width: 100%;
   max-width: 1280px;
