--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -1,7 +1,7 @@
-$mobile: '360px';
-$tablet: '768px';
-$laptop: '1024px';
-$desktop: '1440px';
+$mobile: "360px";
+$tablet: "768px";
+$laptop: "1024px";
+$desktop: "1440px";
 
 // @media screen and (min-width: $mobile) {
 
@@ -21,6 +21,7 @@ $desktop: '1440px';
 $textColor: rgb(25, 43, 57);
 $accentColor: rgb(242, 101, 21);
 $BorderColor: rgba(188, 188, 188, 1);
+$borderColorLangSwitch: rgba(75, 75, 78, 0.5);
 
 $bodyColor: rgba(250, 250, 255, 1);
 
