--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,21 @@
 @import "../../app/variables";
 
 .header {
-  padding: 16px $topBottomPaddingMobile;
+  padding: $sidePaddingMobile;
   position: fixed;
   z-index: 100;
   background-color: $bodyColor;
 
+  // & .LangSwitcher {
+  //   display: none;
+  // }
+
+  @media screen and (min-width: $tablet) {
+    padding: $topBottomPaddingTablet $sidePaddingTablet;
+  }
+  // @media screen and (min-width: $laptop) {
+  //   padding: $topBottomPaddingLaptop $sidePaddingLaptop;
+  // }
   @media screen and (min-width: $desktop) {
     height: 108px;
   }
@@ -16,4 +26,11 @@
   align-items: center;
   height: 100%;
   justify-content: space-between;
+}
+
+.LangSwitcher {
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
 }
