--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -6,11 +6,16 @@
   position: relative;
 
   & img {
-    object-fit: cover;
+    object-fit: contain;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $laptop) {
     width: 282px;
     height: 60px;
   }
+
+  // @media screen and (min-width: $desktop) {
+  //   width: 282px;
+  //   height: 60px;
+  // }
 }
