--- a/src/components/NavigationHeader/NavigationHeader.module.scss
+++ b/src/components/NavigationHeader/NavigationHeader.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   position: absolute;
   right: 0;
-  top: 96px;
+  top: 0;
   flex-direction: column;
   background-color: $bodyColor;
   width: 100vw;
@@ -17,39 +17,79 @@
   padding: 16px;
   overflow: hidden;
 
-  &::before {
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: $BorderColor;
-  }
+  // &::before {
+  //   content: "";
+  //   width: 100%;
+  //   height: 1px;
+  //   background-color: $BorderColor;
+  // }
   &::after {
     content: url("../../../public/images/pattern.webp");
     position: absolute;
-    top: 54px;
-    transform: translate(-50%, 0%) rotate(8deg);
+    // top: 54px;
+    transform: translate(-50%, 20%) rotate(8deg);
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $tablet) {
+    padding-left: $sidePaddingTablet;
+    padding-right: $sidePaddingTablet;
+  }
+
+  @media screen and (min-width: $laptop) {
     position: static;
     flex-direction: row;
     padding: 0;
-    padding-top: 24px;
+    padding-top: 16px;
     width: fit-content;
     height: 100%;
     gap: 32px;
     overflow: visible;
     transform: translateX(0%);
 
-    &::before,
+    // &::before,
     &::after {
       display: none;
     }
   }
+
+  // @media screen and (min-width: $desktop) {
+  //   position: static;
+  //   flex-direction: row;
+  //   padding: 0;
+  //   padding-top: 24px;
+  //   width: fit-content;
+  //   height: 100%;
+  //   gap: 32px;
+  //   overflow: visible;
+  //   transform: translateX(0%);
+
+  //   &::before,
+  //   &::after {
+  //     display: none;
+  //   }
+  // }
 }
 
 .headerNavBurger {
   transform: translateX(0%);
+}
+
+.mobMenuHeader {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid $BorderColor;
+  padding-bottom: 16px;
+}
+
+.langSwitcher {
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+}
+.burgerBtn {
+  @media screen and (min-width: $tablet) {
+    margin-left: auto;
+  }
 }
 
 .navItem {
@@ -61,9 +101,13 @@
   width: 60%;
   margin-left: auto;
   margin-right: 0;
-  @media screen and (min-width: $desktop) {
+  z-index: 10;
+  @media screen and (min-width: $laptop) {
     width: fit-content;
   }
+  // @media screen and (min-width: $desktop) {
+  //   width: fit-content;
+  // }
 }
 .navItemActive {
   height: fit-content;
@@ -80,11 +124,17 @@
   z-index: 10;
   cursor: pointer;
   font-weight: 600;
-  @media screen and (min-width: $desktop) {
+
+  @media screen and (min-width: $laptop) {
     padding-top: 4px;
     height: 100%;
     font-weight: 400;
   }
+  // @media screen and (min-width: $desktop) {
+  //   padding-top: 4px;
+  //   height: 100%;
+  //   font-weight: 400;
+  // }
 }
 .arrow {
   width: 12px;
