--- a/src/sections/heroSection/heroSection.module.scss
+++ b/src/sections/heroSection/heroSection.module.scss
@@ -1,17 +1,19 @@
 @import '../../app/variables';
 
-// .hero {
-//   padding-top: 88px;
-//   @media screen and (min-width: $tablet) {
-//     padding-top: 104px;
-//   }
-//   @media screen and (min-width: $laptop) {
-//     padding-top: 140px;
-//   }
-//   @media screen and (min-width: $desktop) {
-//     padding-top: 133px;
-//   }
-// }
+.hero {
+  max-width: 360px;
+  @media screen and (min-width: $tablet) {
+    max-width: max-content;
+  }
+  @media screen and (min-width: $laptop) {
+    padding-left: 68px;
+    padding-right: 68px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-left: 108px;
+    padding-right: 108px;
+  }
+}
 
 .title {
   font-family: var(--mediumSerif);
@@ -36,7 +38,7 @@
 
   @media screen and (min-width: $desktop) {
     font-weight: 500;
-    font-size: 96px;
+    font-size: 64px;
     margin-bottom: 48px;
   }
 }
@@ -48,9 +50,11 @@
 .contentContainer {
   display: flex;
   flex-direction: column-reverse;
+  align-items: center;
   @media screen and (min-width: $tablet) {
     flex-direction: row;
     justify-content: space-between;
+    align-items: normal;
   }
 }
 
@@ -60,11 +64,27 @@
   flex-direction: column;
   justify-content: space-between;
   @media screen and (min-width: $tablet) {
-    width: 37%;
+    width: 32%;
   }
 
   @media screen and (min-width: $laptop) {
-    width: 22%;
+    width: 25%;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 25%;
+  }
+}
+
+.heroSubtitleMini {
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+}
+
+.heroSubtitleMaxi {
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: block;
   }
 }
 
@@ -94,16 +114,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  column-gap: 29px;
+  column-gap: 48px;
   color: $accentColor;
   font-family: var(--montserrat);
   font-weight: 500;
   font-size: 20px;
+  margin-bottom: 18px;
   @media screen and (min-width: $tablet) {
+    margin-bottom: 0px;
+    column-gap: 46px;
     align-items: flex-end;
   }
 
   @media screen and (min-width: $laptop) {
+    column-gap: 29px;
     font-size: 20px;
   }
 
@@ -168,19 +192,25 @@
 .svgSocialLink {
   width: 40px;
   height: 40px;
-  fill: #97979a;
-  // border: 1px solid #97979a;
+  fill: #fafaff;
+  background-color: #a4a4a6;
+  border: 1px solid #a4a4a6;
   border-radius: 50%;
 }
 
 .imgContainer {
   position: relative;
-  width: 90vw;
-  height: 244px;
-  // height: 144px;
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 33px;
   & img {
     padding-bottom: 64px;
     object-fit: contain;
+  }
+  @media screen and (min-width: $mobile) {
+    height: 290px;
   }
 
   @media screen and (min-width: $tablet) {
@@ -192,47 +222,39 @@
   }
 
   @media screen and (min-width: $laptop) {
-    width: 610px;
-    height: 360px;
+    width: 510px;
+    height: 260px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 910px;
-    height: 460px;
+    width: 654px;
+    height: 331px;
   }
 }
 
-.btn {
+.btnContainer {
   position: absolute;
   bottom: 0;
-  border-radius: 57px;
-  border: none;
   width: 100%;
-  height: 48px;
-  color: #ffffff;
-  background-color: $accentColor;
-  font-family: var(--montserrat);
-  font-weight: 400;
-  font-size: 20px;
-  outline: none;
-  cursor: pointer;
   @media screen and (min-width: $tablet) {
     display: none;
   }
-
   @media screen and (min-width: $laptop) {
     display: block;
-    bottom: 18px;
-    right: 0;
-    bottom: 8px;
-    width: 293px;
-    height: 84px;
+    width: max-content;
+    right: 16px;
+    bottom: 4px;
   }
-
   @media screen and (min-width: $desktop) {
     bottom: 18px;
-    width: 433px;
-    height: 88px;
-    font-size: 24px;
+    right: 30px;
+  }
+}
+
+.costumBtn {
+  @media screen and (min-width: $laptop) {
+    width: max-content;
+    justify-content: center;
+    column-gap: 40px;
   }
 }
