--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -24,6 +24,7 @@ $BorderColor: rgba(188, 188, 188, 1);
 $borderColorLangSwitch: rgba(75, 75, 78, 0.5);
 
 $bodyColor: rgba(250, 250, 255, 1);
+$white: rgb(255, 255, 255);
 
 $topBottomPaddingMobile: 20px;
 $sidePaddingMobile: 20px;
