--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,16 +6,10 @@
   z-index: 100;
   background-color: $bodyColor;
 
-  // & .LangSwitcher {
-  //   display: none;
-  // }
-
   @media screen and (min-width: $tablet) {
     padding: $topBottomPaddingTablet $sidePaddingTablet;
   }
-  // @media screen and (min-width: $laptop) {
-  //   padding: $topBottomPaddingLaptop $sidePaddingLaptop;
-  // }
+
   @media screen and (min-width: $desktop) {
     height: 108px;
   }
@@ -32,5 +26,17 @@
   display: none;
   @media screen and (min-width: $tablet) {
     display: flex;
+  }
+}
+
+#supportBtn {
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    height: 60px;
+    font-size: 18px;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 276px;
   }
 }
