--- a/src/components/LangSwitcher/LangSwitcher.module.scss
+++ b/src/components/LangSwitcher/LangSwitcher.module.scss
@@ -16,8 +16,9 @@
     margin-left: auto;
     margin-right: 40px;
   }
-  @media screen and (min-width: $laptop) {
-    margin-left: 0;
+
+  @media screen and (min-width: $desktop) {
     margin-right: 0px;
+    margin-left: 0;
   }
 }
