--- a/src/components/NavigationHeader/NavigationHeader.module.scss
+++ b/src/components/NavigationHeader/NavigationHeader.module.scss
@@ -17,17 +17,14 @@
   padding: 16px;
   overflow: hidden;
 
-  // &::before {
-  //   content: "";
-  //   width: 100%;
-  //   height: 1px;
-  //   background-color: $BorderColor;
-  // }
   &::after {
     content: url("../../../public/images/pattern.webp");
     position: absolute;
-    // top: 54px;
     transform: translate(-50%, 20%) rotate(8deg);
+  }
+
+  & li {
+    z-index: 200;
   }
 
   @media screen and (min-width: $tablet) {
@@ -35,7 +32,7 @@
     padding-right: $sidePaddingTablet;
   }
 
-  @media screen and (min-width: $laptop) {
+  @media screen and (min-width: $desktop) {
     position: static;
     flex-direction: row;
     padding: 0;
@@ -46,28 +43,10 @@
     overflow: visible;
     transform: translateX(0%);
 
-    // &::before,
     &::after {
       display: none;
     }
   }
-
-  // @media screen and (min-width: $desktop) {
-  //   position: static;
-  //   flex-direction: row;
-  //   padding: 0;
-  //   padding-top: 24px;
-  //   width: fit-content;
-  //   height: 100%;
-  //   gap: 32px;
-  //   overflow: visible;
-  //   transform: translateX(0%);
-
-  //   &::before,
-  //   &::after {
-  //     display: none;
-  //   }
-  // }
 }
 
 .headerNavBurger {
@@ -79,14 +58,17 @@
   justify-content: space-between;
   border-bottom: 1px solid $BorderColor;
   padding-bottom: 16px;
+  // z-index: 10;
 }
 
 .langSwitcher {
-  @media screen and (min-width: $tablet) {
+  margin: 0;
+  @media screen and (min-width: $desktop) {
     display: none;
   }
 }
 .burgerBtn {
+  margin: 0;
   @media screen and (min-width: $tablet) {
     margin-left: auto;
   }
@@ -101,13 +83,10 @@
   width: 60%;
   margin-left: auto;
   margin-right: 0;
-  z-index: 10;
-  @media screen and (min-width: $laptop) {
+  // z-index: 10;
+  @media screen and (min-width: $desktop) {
     width: fit-content;
   }
-  // @media screen and (min-width: $desktop) {
-  //   width: fit-content;
-  // }
 }
 .navItemActive {
   height: fit-content;
@@ -118,19 +97,13 @@
   display: flex;
   align-items: center;
   gap: 12px;
-  // height: 100%;
   background-color: $bodyColor;
   position: relative;
   z-index: 10;
   cursor: pointer;
   font-weight: 600;
 
-  @media screen and (min-width: $laptop) {
-    padding-top: 4px;
-    height: 100%;
-    font-weight: 400;
-  }
-  // @media screen and (min-width: $desktop) {
+  // @media screen and (min-width: $laptop) {
   //   padding-top: 4px;
   //   height: 100%;
   //   font-weight: 400;
@@ -150,11 +123,19 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  gap: 12px;
+  gap: 24px;
   z-index: 0;
   background-color: $bodyColor;
   transform: translateY(-120%);
 }
 .active {
   transform: translateY(0%);
+}
+
+.navLink {
+  @media screen and (min-width: $desktop) {
+    padding: 16px 24px;
+    border-bottom: 1px solid $textColor;
+    font-size: 20px;
+  }
 }
