completed mission mobile, changed some global styles

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -18,13 +18,14 @@ $desktop: "1440px";
 
 // }
 
-$textColor: rgb(25, 43, 57);
-$accentColor: rgb(242, 101, 21);
-$BorderColor: rgba(188, 188, 188, 1);
-$borderColorLangSwitch: rgba(75, 75, 78, 0.5);
+$textColor: #192b39;
+$accentColor: #f26515;
+$BorderColor: #bcbcbc;
+$borderColorLangSwitch: #4b4b4e80;
+$shadowButtonColor: #4b4b4e50;
 
-$bodyColor: rgba(250, 250, 255, 1);
-$white: rgb(255, 255, 255);
+$bodyColor: #fafaff;
+$white: #ffffff;
 
 $topBottomPaddingMobile: 20px;
 $sidePaddingMobile: 20px;
