--- a/src/sections/missionSection/MissionSection.module.scss
+++ b/src/sections/missionSection/MissionSection.module.scss
@@ -1,37 +1,75 @@
 @import '../../app/variables';
 
-
-.section {
-    padding-top: 104px;
-}
-
+// titleCardText in UI design
 .subTitle {
     font-family: var(--montserrat);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
     margin-bottom: 32px;
+
+    @media screen and (min-width: $tablet) {
+        font-weight: 400;
+        font-size: 24px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        font-size: 40px;
+        margin-bottom: 40px;
+    }
+
+    & .accentText {
+        color: inherit;
+
+        @media screen and (min-width: $tablet) {
+            color: $accentColor;
+        }
+    }
 }
 
 .imgWrapper {
     width: 100%;
-    height: 58.2vw;
+    // height: 58.2vw;
+    height: 50.94vw;
     position: relative;
     border-radius: 53px;
     overflow: hidden;
     margin-bottom: 24px;
+
+    @media screen and (min-width: $tablet) {
+        // height: 58.66vw;
+        height: 53.78vw;
+        margin-bottom: 32px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        width: 1279px;
+        height: 749px;
+        margin-bottom: 40px;
+    }
 }
 
 .img {
     object-fit: cover;
 }
 
+// regularText in UI design
 .text {
     font-family: var(--montserrat);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.2;
     margin-bottom: 24px;
+
+    @media screen and (min-width: $tablet) {
+        font-size: 20px;
+        margin-bottom: 32px;
+    }
+
+    @media screen and (min-width: $tablet) {
+        font-size: 24px;
+        margin-bottom: 40px;
+    }
 }
 
 .accentText {
@@ -53,4 +91,35 @@
     font-size: 16px;
     line-height: 1.2;
     cursor: pointer;
+
+    @media screen and (min-width: $tablet) {
+        padding: 24px 32px;
+        width: 704px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 24px;
+
+        &:hover .arrow,
+        &:focus .arrow {
+            transform: rotate(90deg);
+        }
+    }
+
+    @media screen and (min-width: $desktop) {
+        padding: 32px 40px;
+        width: 650px;
+        margin: 0;
+    }
+}
+
+.arrow {
+    display: none;
+
+    @media screen and (min-width: $tablet) {
+        display: block;
+        width: 24px;
+        height: 24px;
+        fill: $white;
+    }
 }
