--- a/src/sections/missionSection/MissionSection.module.scss
+++ b/src/sections/missionSection/MissionSection.module.scss
@@ -1,35 +1,27 @@
 @import '../../app/variables';
 
-// titleCardText in UI design
-.subTitle {
-    font-family: var(--montserrat);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.2;
-    margin-bottom: 32px;
+.title {
+    margin-bottom: 24px;
 
     @media screen and (min-width: $tablet) {
-        font-weight: 400;
-        font-size: 24px;
+        margin-bottom: 32px;
     }
 
     @media screen and (min-width: $desktop) {
-        font-size: 40px;
         margin-bottom: 40px;
     }
+}
 
-    & .accentText {
-        color: inherit;
+.subtitle {
+    margin-bottom: 32px;
 
-        @media screen and (min-width: $tablet) {
-            color: $accentColor;
-        }
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 40px;
     }
 }
 
 .imgWrapper {
     width: 100%;
-    // height: 58.2vw;
     height: 50.94vw;
     position: relative;
     border-radius: 53px;
@@ -37,7 +29,6 @@
     margin-bottom: 24px;
 
     @media screen and (min-width: $tablet) {
-        // height: 58.66vw;
         height: 53.78vw;
         margin-bottom: 32px;
     }
@@ -53,27 +44,20 @@
     object-fit: cover;
 }
 
-// regularText in UI design
-.text {
-    font-family: var(--montserrat);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.2;
+.textWrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
     margin-bottom: 24px;
 
     @media screen and (min-width: $tablet) {
-        font-size: 20px;
+        row-gap: 10px;
         margin-bottom: 32px;
     }
 
-    @media screen and (min-width: $tablet) {
-        font-size: 24px;
+    @media screen and (min-width: $desktop) {
         margin-bottom: 40px;
     }
-}
-
-.accentText {
-    color: $accentColor;
 }
 
 .btn {
