--- a/src/components/Buttons/ButtonLink/ButtonLink.module.scss
+++ b/src/components/Buttons/ButtonLink/ButtonLink.module.scss
@@ -4,9 +4,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  height: 48px;
-  padding: 16px 47px;
+  width: 136px;
+  height: 38px;
+  // width: 100%;
+  // height: 48px;
+  padding: 9px 18px;
+  // padding: 16px 47px;
   font-family: var(--montserrat);
   font-weight: 400;
   font-size: 16px;
@@ -45,9 +48,13 @@
 }
 
 .arrow {
-  fill: $white;
-  width: 16px;
-  height: 15px;
+  display: none;
+  @media screen and (min-width: $tablet) {
+    display: block;
+    fill: $white;
+    width: 16px;
+    height: 15px;
+  }
   @media screen and (min-width: $laptop) {
     width: 24px;
     height: 22px;
