--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -22,8 +22,8 @@ $textColor: #192b39;
 $accentColor: #f26515;
 $BorderColor: #bcbcbc;
 $borderColorLangSwitch: #4b4b4e80;
-$shadowButtonColor: #4b4b4e50;
-
+$dateBgColor: #aacee780;
+$line: #396a787a;
 $bodyColor: #fafaff;
 $white: #ffffff;
 
