--- a/src/sections/missionSection/MissionSection.module.scss
+++ b/src/sections/missionSection/MissionSection.module.scss
@@ -45,6 +45,7 @@
 }
 
 .textWrapper {
+    // text-indent: 3%;
     display: flex;
     flex-direction: column;
     row-gap: 8px;
@@ -67,7 +68,7 @@
     display: block;
     border-radius: 54px;
     border: transparent;
-    box-shadow: 2px 2px 4px 0 $shadowButtonColor;
+    box-shadow: 2px 2px 4px 0 $borderColorLangSwitch;
     background-color: $accentColor;
     color: $white ;
     font-family: var(--montserrat);
