--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -167,7 +167,7 @@ ol {
     font-size: 20px;
   }
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $desktop) {
     font-size: 24px;
   }
 }
