--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,4 @@
-@import './_variables';
+@import "./_variables";
 
 *,
 *::before,
@@ -67,6 +67,7 @@ section {
 a {
   text-decoration: none;
   color: inherit;
+  display: inline-block;
 }
 
 ul,
@@ -174,16 +175,4 @@ ol {
 
 .accentText {
   color: $accentColor;
-}
-
-.footer {
-  padding: 24px $sidePaddingMobile 32px;
-
-  @media screen and (min-width: $tablet) {
-    padding: 32px $sidePaddingTablet;
-  }
-
-  @media screen and (min-width: $desktop) {
-    padding: 50px $sidePaddingDesktop 52px;
-  }
 }
