--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -18,14 +18,14 @@ $desktop: "1440px";
 
 // }
 
-$textColor: #192b39;
-$accentColor: #f26515;
-$BorderColor: #bcbcbc;
-$borderColorLangSwitch: #4b4b4e80;
-$dateBgColor: #aacee780;
-$line: #396a787a;
-$bodyColor: #fafaff;
-$white: #ffffff;
+$textColor: rgb(25, 43, 57);
+$accentColor: rgb(242, 101, 21);
+$BorderColor: rgb(188, 188, 188);
+$borderColorLangSwitch: rgba(75, 75, 78, 0.502);
+$dateBgColor: rgba(170, 206, 231, 0.502);
+$line: rgba(57, 106, 120, 0.478);
+$bodyColor: rgb(250, 250, 255);
+$white: rgb(255, 255, 255);
 
 $topBottomPaddingMobile: 20px;
 $sidePaddingMobile: 20px;
