--- a/src/components/HomeSwiper/homeSwiper.css
+++ b/src/components/HomeSwiper/homeSwiper.css
@@ -1,36 +1,64 @@
 .homeSwiper {
-  height: 300px;
-  padding-bottom: 38px;
+  height: 380px;
+  font-family: var(--montserrat);
+  font-weight: 400;
+  margin-left: -20px;
+  margin-right: -20px;
 }
 
 .homeSwiper .swiper-slide {
   display: flex;
   justify-content: center;
+  padding: 0px 20px;
 }
 
 .homeSwiper .wrapp {
-  width: 300px;
-  height: 100%;
-  overflow: hidden;
-  overflow: auto;
+  /* width: 280px; */
+  width: 100%;
+  max-width: 400px;
+  height: 340px;
   border-radius: 32px;
   box-shadow: 2px 2px 4px rgba(75, 75, 78, 0.502);
+  overflow: hidden;
+  /* overflow: auto; */
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 
-  /* @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 768px) {
+    flex-direction: row-reverse;
+    gap: 40px;
     border-radius: 50px;
-  } */
+  }
 }
 
 .homeSwiper .txtWrapp {
-  padding-bottom: 20px;
+  padding-bottom: 16px;
   border-bottom: 1px solid rgba(170, 206, 231, 0.502);
+  width: 100%;
+}
+.homeSwiper .txtWrapp .title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  margin-bottom: 8px;
+}
+.homeSwiper .txtWrapp .createdAt {
+  font-weight: 300;
+  font-size: 10px;
+}
+.homeSwiper .txtWrapp .descr {
+  font-weight: 500;
 }
 
 .homeSwiper .imgWrapp {
   width: 100%;
-  height: 100%;
+  height: 232px;
   overflow: hidden;
   position: relative;
+  border-radius: 24px;
 }
 
 .homeSwiper .imgWrapp .img {
