--- a/src/components/ProjectItem/ProjectItem.module.scss
+++ b/src/components/ProjectItem/ProjectItem.module.scss
@@ -75,4 +75,8 @@
   background-color: $accentColor;
   outline: none;
   cursor: pointer;
+  &:hover,
+  &:focus {
+    background-color: #ff5c00;
+  }
 }
