--- a/src/sections/partnershipSection/PartnershipSection.module.scss
+++ b/src/sections/partnershipSection/PartnershipSection.module.scss
@@ -26,6 +26,7 @@
   @media screen and (min-width: $laptop) {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    margin-bottom: 32px;
   }
   @media screen and (min-width: $desktop) {
     grid-template-columns: repeat(4, 1fr);
@@ -37,7 +38,6 @@
 .partnershipItem {
   display: flex;
   align-items: center;
-  // justify-content: center;
   flex-direction: column;
   height: 100%;
   border-radius: 54px;
@@ -58,8 +58,6 @@
   position: relative;
   width: 55%;
   height: 30vw;
-  // width: 91px;
-  // height: 92px;
   & img {
     object-fit: contain;
   }
@@ -91,10 +89,13 @@
 }
 
 .partnershipSmallList {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 20px;
-  row-gap: 40px;
+  display: none;
+  @media screen and (min-width: $laptop) {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    row-gap: 40px;
+  }
 }
 
 .partnershipSmallItem {
