--- a/src/sections/teamSection/TeamSection.module.scss
+++ b/src/sections/teamSection/TeamSection.module.scss
@@ -34,9 +34,11 @@
   box-shadow: 1px 1px 10px 0 rgba(75, 75, 78, 0.5);
   border-radius: 50px;
   @media screen and (min-width: $tablet) {
+    justify-content: start;
     flex-direction: row;
     padding: 44px 54px;
-    column-gap: 51px;
+    column-gap: 15%;
+    // column-gap: 51px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -57,16 +59,17 @@
   }
 
   @media screen and (min-width: $tablet) {
-    min-width: 224px;
+    width: 224px;
     height: 231px;
     margin: auto 0px;
   }
   @media screen and (min-width: $laptop) {
-    height: 40vw;
+    width: 30vw;
+    height: 30vw;
   }
 
   @media screen and (min-width: $desktop) {
-    min-width: 432px;
+    width: 432px;
     height: 447px;
   }
 }
@@ -75,7 +78,7 @@
   display: flex;
   flex-direction: column;
   @media screen and (min-width: $tablet) {
-    justify-content: space-around;
+    justify-content: space-evenly;
   }
 }
 
