fixed some styles and created functionality for coworkers

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -26,6 +26,7 @@ $dateBgColor: #aacee780;
 $line: #396a787a;
 $bodyColor: #fafaff;
 $white: #ffffff;
+$shadow: #4B4B4E80;
 
 $topBottomPaddingMobile: 20px;
 $sidePaddingMobile: 20px;
