--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -20,6 +20,7 @@ $desktop: "1440px";
 
 $textColor: rgb(25, 43, 57);
 $accentColor: rgb(242, 101, 21);
+$hoverBtnColor: rgb(255 92 0);
 $BorderColor: rgb(188, 188, 188);
 $borderColorLangSwitch: rgba(75, 75, 78, 0.502);
 $dateBgColor: rgba(170, 206, 231, 0.502);
