--- a/src/components/Buttons/BurgerBtn/BurgerBtn.module.scss
+++ b/src/components/Buttons/BurgerBtn/BurgerBtn.module.scss
@@ -10,6 +10,12 @@
   width: 64px;
   height: 48px;
   border-radius: 30px;
+
+  &:hover,
+  &:focus {
+    background-color: $hoverBtnColor;
+  }
+
   @media screen and (min-width: $tablet) {
     width: 72px;
     height: 60px;
