--- a/src/sections/dashboard/DashboardSections.module.scss
+++ b/src/sections/dashboard/DashboardSections.module.scss
@@ -1,10 +1,9 @@
-@import "../../../app/variables";
+@import "../../app/variables";
 
 .container {
     width: 100%;
     display: flex;
     gap: 20px;
-    padding: 40px;
 }
 
 .cardsList {
