--- a/src/app/(pages)/dashboard/page.module.scss
+++ b/src/app/(pages)/dashboard/page.module.scss
@@ -7,7 +7,11 @@
         display: block;
         width: 100%;
         max-width: 1440px;
-        padding-top: 140px;
+        padding-top: 100px;
+    }
+
+    @media screen and (min-width:$desktop) {
+        padding-top: 108px;
     }
 }
 
