--- a/src/components/dashboard/DashboardNavigation/DashboardNavigation.module.scss
+++ b/src/components/dashboard/DashboardNavigation/DashboardNavigation.module.scss
@@ -9,16 +9,14 @@
         justify-content: space-evenly;
         align-items: center;
         height: 50px;
+        font-family: var(--montserrat);
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 1.2;
     }
 }
 
 .navigationContainer .pageLink {
-    // font-family: var(--font-noto-sans);
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.6;
-    color: ffffff;
-
     position: relative;
     display: inline-block;
     width: fit-content;
@@ -28,8 +26,8 @@
         position: absolute;
         width: 0%;
         height: 2px;
-        // background-image: $gradient;
-        bottom: 0;
+        background-color: $accentColor;
+        bottom: -5px;
         left: 0;
     }
 
