--- a/src/sections/dashboard/DashboardSections.module.scss
+++ b/src/sections/dashboard/DashboardSections.module.scss
@@ -12,3 +12,11 @@
     flex-direction: column;
     row-gap: 40px;
 }
+
+.userCardsList {
+    width: fit-content;
+    margin:0 auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+}
