--- a/src/components/Buttons/ButtonLink/ButtonLink.module.scss
+++ b/src/components/Buttons/ButtonLink/ButtonLink.module.scss
@@ -1,8 +1,14 @@
 @import '../../../app/variables';
 
 .btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 136px;
   height: 38px;
@@ -19,7 +25,7 @@
 
   &:hover,
   &:focus {
-    background-color: #ff5c00;
+    background-color: $hoverBtnColor;
 
     & .arrow {
       transform: rotate(90deg);
