--- a/src/components/ProjectItem/ProjectItem.module.scss
+++ b/src/components/ProjectItem/ProjectItem.module.scss
@@ -1,8 +1,15 @@
 @import '../../app/variables';
 
 .projectsItem {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 20px 20px;
   border-radius: 50px;
@@ -39,9 +46,16 @@
 }
 
 .contentProject {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   row-gap: 16px;
 }
 
@@ -63,8 +77,14 @@
 .btn {
   width: 184px;
   height: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   border-radius: 54px;
   font-family: var(--montserrat);
