--- a/src/sections/heroSection/heroSection.module.scss
+++ b/src/sections/heroSection/heroSection.module.scss
@@ -20,7 +20,12 @@
   font-weight: 500;
   font-size: 24px;
   color: $textColor;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   row-gap: 16px;
   margin-bottom: 24px;
@@ -48,11 +53,18 @@
 }
 
 .heroContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   flex-direction: column-reverse;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   @media screen and (min-width: $tablet) {
+    -webkit-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     align-items: normal;
   }
@@ -60,8 +72,15 @@
 
 .contentContainer {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   @media screen and (min-width: $tablet) {
     width: 35%;
@@ -111,8 +130,14 @@
 
 .currentProjects {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   column-gap: 48px;
   color: $accentColor;
@@ -174,7 +199,12 @@
 }
 
 .projectsGroup {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   width: 100%;
 }
