--- a/src/sections/homeAboutFundSection/HomeAboutFundSection.module.scss
+++ b/src/sections/homeAboutFundSection/HomeAboutFundSection.module.scss
@@ -1,18 +1,31 @@
 @import '../../app/variables';
 
 .aboutContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   column-gap: 24px;
   @media screen and (min-width: $tablet) {
+    -webkit-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     column-gap: 0px;
   }
 }
 
 .contentList {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   row-gap: 24px;
   margin-bottom: 24px;
@@ -47,9 +60,15 @@
 }
 
 .btnContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
-
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   row-gap: 24px;
   @media screen and (min-width: $tablet) {
@@ -57,6 +76,8 @@
     row-gap: 0px;
   }
   @media screen and (min-width: $desktop) {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 }
@@ -65,8 +86,14 @@
   padding: 16px 24px;
   width: 100%;
   height: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   font-family: var(--montserrat);
   font-weight: 400;
