--- a/src/sections/teamSection/TeamSection.module.scss
+++ b/src/sections/teamSection/TeamSection.module.scss
@@ -12,7 +12,12 @@
 }
 
 .teamList {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 
   row-gap: 24px;
@@ -27,8 +32,15 @@
 }
 
 .teamCard {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   padding: 24px 30px;
   box-shadow: 1px 1px 10px 0 rgba(75, 75, 78, 0.5);
@@ -75,7 +87,12 @@
 }
 
 .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   @media screen and (min-width: $tablet) {
     justify-content: space-evenly;
