ne Header a pisnia

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -89,8 +89,8 @@
 
 #logo {
   filter: grayscale(3) brightness(3);
-  width: 188px;
-  height: 60px;
+  // width: 188px;
+  // height: 60px;
   margin-bottom: 12px;
   @media screen and (min-width: $tablet) {
     margin-bottom: 12px;
