--- a/src/components/Buttons/BurgerBtn/BurgerBtn.module.scss
+++ b/src/components/Buttons/BurgerBtn/BurgerBtn.module.scss
@@ -1,37 +1,27 @@
 @import "../../../app/variables";
 
 .btn {
-  background-color: $accentColor;
-  border: none;
-  outline: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 64px;
-  height: 48px;
-  border-radius: 30px;
-
-  &:hover,
-  &:focus {
-    background-color: $hoverBtnColor;
+  &:focus svg,
+  &:hover svg {
+    stroke: $hoverBtnColor;
   }
+}
 
-  @media screen and (min-width: $tablet) {
-    width: 72px;
-    height: 60px;
-    margin-right: 40px;
-  }
-
+#btn {
   @media screen and (min-width: $desktop) {
     display: none;
   }
+  // &:focus svg,
+  // &:hover svg {
+  //   stroke: $hoverBtnColor;
+  // }
 }
 
 .icon {
   width: 18px;
   height: 12px;
   fill: $bodyColor;
-  stroke: $bodyColor;
+  stroke: $textColor;
 }
 
 .close {
