--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -15,3 +15,18 @@
     height: 60px;
   }
 }
+
+.mobileLlogoWrapp {
+  width: 20px;
+  height: 48px;
+  position: relative;
+  overflow: hidden;
+  & img {
+    object-fit: contain;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 28px;
+    height: 60px;
+  }
+}
